ros_ws/logs/pd/build.make.045.log.stderr
/home/mech-user/work/nekonote/ros_ws/src/pd/src/control.cpp: In member function ‘std_msgs::Int32MultiArray Control::getMsgs2(std::vector<std::pair<int, int> >)’:
/home/mech-user/work/nekonote/ros_ws/src/pd/src/control.cpp:60:18: error: no match for ‘operator=’ (operand types are ‘std_msgs::MultiArrayLayout_<std::allocator<void> >::_dim_type {aka std::vector<std_msgs::MultiArrayDimension_<std::allocator<void> >, std::allocator<std_msgs::MultiArrayDimension_<std::allocator<void> > > >}’ and ‘std_msgs::MultiArrayDimension* {aka std_msgs::MultiArrayDimension_<std::allocator<void> >*}’)
   msg.layout.dim = (std_msgs::MultiArrayDimension*)calloc(sizeof(std_msgs::MultiArrayDimension), 2);
                  ^
/home/mech-user/work/nekonote/ros_ws/src/pd/src/control.cpp:60:18: note: candidates are:
In file included from /usr/include/c++/4.8/vector:69:0,
                 from /usr/include/c++/4.8/bits/random.h:34,
                 from /usr/include/c++/4.8/random:50,
                 from /usr/include/c++/4.8/bits/stl_algo.h:65,
                 from /usr/include/c++/4.8/algorithm:62,
                 from /home/mech-user/work/nekonote/ros_ws/src/pd/include/bits/stdc++.h:67,
                 from /home/mech-user/work/nekonote/ros_ws/src/pd/include/control.h:4,
                 from /home/mech-user/work/nekonote/ros_ws/src/pd/src/control.cpp:1:
/usr/include/c++/4.8/bits/vector.tcc:160:5: note: std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = std_msgs::MultiArrayDimension_<std::allocator<void> >; _Alloc = std::allocator<std_msgs::MultiArrayDimension_<std::allocator<void> > >]
     vector<_Tp, _Alloc>::
     ^
/usr/include/c++/4.8/bits/vector.tcc:160:5: note:   no known conversion for argument 1 from ‘std_msgs::MultiArrayDimension* {aka std_msgs::MultiArrayDimension_<std::allocator<void> >*}’ to ‘const std::vector<std_msgs::MultiArrayDimension_<std::allocator<void> >, std::allocator<std_msgs::MultiArrayDimension_<std::allocator<void> > > >&’
In file included from /usr/include/c++/4.8/vector:64:0,
                 from /usr/include/c++/4.8/bits/random.h:34,
                 from /usr/include/c++/4.8/random:50,
                 from /usr/include/c++/4.8/bits/stl_algo.h:65,
                 from /usr/include/c++/4.8/algorithm:62,
                 from /home/mech-user/work/nekonote/ros_ws/src/pd/include/bits/stdc++.h:67,
                 from /home/mech-user/work/nekonote/ros_ws/src/pd/include/control.h:4,
                 from /home/mech-user/work/nekonote/ros_ws/src/pd/src/control.cpp:1:
/usr/include/c++/4.8/bits/stl_vector.h:439:7: note: std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::vector<_Tp, _Alloc>&&) [with _Tp = std_msgs::MultiArrayDimension_<std::allocator<void> >; _Alloc = std::allocator<std_msgs::MultiArrayDimension_<std::allocator<void> > >]
       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
       ^
/usr/include/c++/4.8/bits/stl_vector.h:439:7: note:   no known conversion for argument 1 from ‘std_msgs::MultiArrayDimension* {aka std_msgs::MultiArrayDimension_<std::allocator<void> >*}’ to ‘std::vector<std_msgs::MultiArrayDimension_<std::allocator<void> >, std::allocator<std_msgs::MultiArrayDimension_<std::allocator<void> > > >&&’
/usr/include/c++/4.8/bits/stl_vector.h:461:7: note: std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = std_msgs::MultiArrayDimension_<std::allocator<void> >; _Alloc = std::allocator<std_msgs::MultiArrayDimension_<std::allocator<void> > >]
       operator=(initializer_list<value_type> __l)
       ^
/usr/include/c++/4.8/bits/stl_vector.h:461:7: note:   no known conversion for argument 1 from ‘std_msgs::MultiArrayDimension* {aka std_msgs::MultiArrayDimension_<std::allocator<void> >*}’ to ‘std::initializer_list<std_msgs::MultiArrayDimension_<std::allocator<void> > >’
/home/mech-user/work/nekonote/ros_ws/src/pd/src/control.cpp:78:14: error: ‘std_msgs::Int32MultiArray_<std::allocator<void> >::_layout_type’ has no member named ‘dim_length’
   msg.layout.dim_length = 1;
              ^
/home/mech-user/work/nekonote/ros_ws/src/pd/src/control.cpp:79:14: error: ‘std_msgs::Int32MultiArray_<std::allocator<void> >::_layout_type’ has no member named ‘data_length’
   msg.layout.data_length = msg.data.size();
              ^
make[2]: *** [CMakeFiles/pd.dir/src/control.cpp.o] エラー 1
make[2]: *** 未完了のジョブを待っています....
make[1]: *** [CMakeFiles/pd.dir/all] エラー 2
make: *** [all] エラー 2
